# density-engine

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_RESTRUCTURED.md  TASK_QUEUE_DESIGN.md  VAST.md  fix_decorators.py  fix_decorators_v2.py  go_abn.sh  go_an.sh  go_nnm.sh  job_patterns.json  make_jobs.sh  model_config.txt  pyproject.toml  run_vast.py  suppress_mypy_errors.py  train_experiments_lr.sh  vast_requirements.txt  vast_severt.txt
config/: production.yaml
density_engine/: garch.py  skew_student_t.py  torch.py  types.py
density_engine/cluster/: README.md  __init__.py  cluster_manager.py  gpu_names.py  instance_manager.py  job_manager.py  marketplace.py  ssh_client.py  vast_api.py
density_engine/models/: __init__.py  base.py  garch.py  mdn.py  registry.py  rough_bergomi.py  rough_heston.py
density_engine/tasks/: __init__.py  celery_app.py  cluster.py  instances.py  jobs.py  recovery.py
density_engine/utils/: __init__.py  fractional_bm.py  quantiles.py  ringbuffer.py  schedulers.py  skew_student_t.py  torch.py
density_engine/vast/: __init__.py
density_engine/vast/core/: __init__.py  files.py  jobs.py  ssh.py  state.py
density_engine/vast/execution/: __init__.py  job_runner.py  process_monitor.py  result_handler.py
density_engine/vast/instances/: __init__.py  discovery.py  lifecycle.py  monitoring.py  preparation.py
density_engine/vast/orchestration/: __init__.py  coordinator.py  scheduler.py  (+1 more)
examples/: README.md  cluster_manager_demo.py  hf_job_manager.py  rent_and_monitor_instances.py  requirements.txt  test_gpu_validation.py  test_vast_api.py
jobs/: garch_test_jobs.csv
notebooks/: check_var_inf.ipynb  evaluate_mlflow_model.ipynb  example_garch.ipynb  garch_densities_visualization.ipynb  outlierbuffer.ipynb  smoothness.ipynb  train_garch.ipynb  validate_quantile_noise.ipynb  validate_reduced_garch_mean.ipynb  validate_skew_student_t.ipynb  validate_var_inf.ipynb  visualize_test_loss_learning_rate.ipynb
scripts/: check_output.py  make_garch_jobs.py  manage_cluster.py  merge_outputs.py  merge_outputs_enhanced.py  reschedule_missing_jobs.py  run_garch_jobs.py  run_simulation_worker.py  test_cluster.py  train.py  train_clean.py
scripts/deploy/: start_system.sh  stop_system.sh
scripts/vast/: README.md  find_machines.py  manage.py  orchestrator.py  rent_machine.py
(+7 files in other folders)
