[tool.poetry]
name = "density-engine"
version = "0.1.0"
description = "Pretrained Simulation based Density Models for Finance"
authors = ["simu.ai <thijs@simu.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
torch = "^2.8.0"
scipy = "^1.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
