[tool.poetry]
name = "density-engine"
version = "0.1.0"
description = "Pretrained Simulation based Density Models for Finance"
authors = ["simu.ai <thijs@simu.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^1.24.0"
matplotlib = "^3.10.6"
torch = "^2.0.0"
scipy = "^1.11.0"
pandas = "^1.5.0"
huggingface-hub = "^0.24.0"
python-dotenv = "^1.0.0"
pyarrow = "^21.0.0"
paramiko = "^4.0.0"
scp = "^0.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
bandit = "^1.7.10"
pylint = "^3.3.1"
docformatter = "^1.7.5"
pyupgrade = "^3.17.0"

# Tool configurations
types-paramiko = "^4.0.0.20250822"
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pylint.messages_control]
disable = "C0114,C0116,R0903,R0913,W0613"

[tool.bandit]
exclude_dirs = ["tests", "test"]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
